# NeuralCortex

./: CMakeLists.txt
src/: main.c
